DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/TIMBASURVEYS__Survey_Summary__c.object-meta.xml
<CustomObject>
    <label>Survey Summary</label>
    <nameField>
        <label>Survey_Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>