DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__Complete_Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Complete_Survey_Name__c</fullName>
    <label>Complete Survey Name</label>
    <type>TextArea</type>
</CustomField>