DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__RelatedContract__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedContract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Survey Summaries</relationshipLabel>
    <relationshipName>Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>