DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedOpportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Summaries</relationshipLabel>
    <relationshipName>Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>