DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__RelatedSolution__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedSolution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedSolution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Survey Summaries</relationshipLabel>
    <relationshipName>Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>