DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__Survey__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
    <relationshipLabel>Survey Summaries</relationshipLabel>
    <relationshipName>Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>