DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Total_Weight__c</fullName>
    <label>Total Weight</label>
    <summarizedField>TIMBASURVEYS__Question_Summary__c.TIMBASURVEYS__weight__c</summarizedField>
    <summaryForeignKey>TIMBASURVEYS__Question_Summary__c.TIMBASURVEYS__Survey_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>