DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Survey_Summary__c/fields/TIMBASURVEYS__Who_Id__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Who_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that sends the survey to the recipient</description>
    <label>Who Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>